examples/test/testpolicy19132.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19132
  namespace: namespace153
spec:
  podSelector:
    matchLabels:
      key44: value8
      key33: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value29
          key37: value8
          key45: value27
      podSelector:
        matchLabels:
          key17: value37
          key21: value49
          key2: value5
